--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -2,10 +2,7 @@
 name: Deploy Docs
 
 on:
-  push:
-    branches:
-      # make sure this is the branch you are using
-      - main
+  workflow_dispatch:
 
 permissions:
   contents: write
@@ -18,6 +15,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
+
       - name: Setup Rust and install mdBook
         uses: moonrepo/setup-rust@v1
         with:
@@ -30,6 +28,5 @@ jobs:
       - name: Deploy Docs
         uses: JamesIves/github-pages-deploy-action@v4
         with:
-          # This is the branch where the docs are deployed to
           branch: gh-pages
           folder: book
